# supermake

./: README.md  index.html  pyproject.toml  style.css  supermake  supermake.py
supermake/: main.py
